--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
 <br/>
 <br/>
 <br/>
-<br/>
-about me
+<h1>
+About Me:
+</h1>
+<p>
+  אלמן כבר עשור, אבא ל-3 ילדים וסבא ל- 5 נכדים מקסימים. חקלאי ממושב בקעות. אוהב טיולים בארץ ובחו"ל, תיאטרון, אוכל ביתי נהנה ממסעדה טובה. מתרגש מזריחות ושקיעות, פריחות, נופים ואתרים מיוחדים.
+</p>
 <br/>
 <br/>
 <br/>
@@ -53,9 +57,11 @@ about me
 <br/>
 <br/>
 <br/>
-<br/>
+<h1>
 my photos
+</h1>
 <br/>
+<img src="src/selfie.jpeg" />
 <br/>
 <br/>
 </section>
