--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ About Me:
 my photos
 </h1>
 <br/>
-<img src="src/selfie.jpeg" />
+<img src="src/selfie.jpeg" width="300" height="300"/>
 <br/>
 <br/>
 </section>
@@ -85,6 +85,7 @@ my photos
 <br/>
 my playlist
 <br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VqhCQZaH4Vs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br/>
 <br/>
 </section>
@@ -131,6 +132,7 @@ give me a like
 <br/>
 scan my code
 <br/>
+<img src="src/qr.png" width="300" height="300"/>
 <br/>
 <br/>
 </section>
