--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
 <br/>
 <br/>
 <div class="container">
-  <form action="action_page.php">
+  <form action="mailto:myforms@mydomain.com?subject=myform_submission" onsubmit="location.href='thanks.html';">
   <label for="name" style="color:aliceblue;">שם: </label>
-  <input type="text" id="name" name="name" placeholder="השם שלך...">
+  <input type="text" id="name" name="name" style="color:aliceblue;" placeholder="השם שלך...">
   <label for="user_email" style="color:aliceblue;">אימייל:</label>
-      <input type="email" id="user_email" name="user_email" placeholder="JohnSmith@gmail.com" />
+      <input type="email" id="user_email" name="user_email" style="color:aliceblue;" placeholder="JohnSmith@gmail.com" />
       <br/>
       <label for="subject" style="color:aliceblue;">נושא:</label>
-      <textarea id="subject" name="subject" placeholder="כתוב/י משהו..." style="height:200px"></textarea>
+      <textarea id="subject" name="subject" style="color:aliceblue;" placeholder="כתוב/י משהו..." style="height:200px"></textarea>
       <label for="emoji" style="color:aliceblue;">אימוג'ים:</label>
       <divclass="container">
         <textarea class="text"></textarea>
@@ -115,7 +115,7 @@
         input.addEventListener('click', function(){picker.pickerVisible ? picker.hidePicker() : picker.showPicker(input)})
       </script>
       <br/>
-      <input type="submit" value="Submit">
+      <input type="submit" value="שלח">
 </form>
 </div>
 <br/>
