--- a/index.html
+++ b/index.html
@@ -126,12 +126,24 @@
   <br/>
   <br/>
   <br/>
-<h1 class="decorated" style="color:white;font-size:200%;">
-  <span>ans</span>
+<h1 class="decorated" style="color:white;font-size:200%;display:flow-root;">
+  <span>Q&A</span>
 </h1>
 <br/>
 <br/>
+<div id="intromessage">
+  <div style="float:left;clear:both;">
+    <img class="image1" src="src/diffarence table.png"/>
+  </div id="count">
+  <p style="color:white;font-size:150%;text-align: left;">
+    <U>Editing content:</U> B1 - Only the creator of the site has access to the content of the site and therefore without change from the creator himself, the site will look the same. For users of 2 and 3, such as YouTube, each time the site content is refreshed, the site will be different because the videos offered will be replaced.
+    <br/>
+    <U>Interaction:</U> In 1 the user is only able to see the content of the site. In 2, we will take YouTube for example, a user can see videos and add a comment to the video. In the 3 videos, the user is personally recommended according to his way of watching. In addition the commercials on each video are also tailored according to what the user likes
+    <br/>
+    <U>Access:</U> In 1 the user writes the link itself into the search. In 2 and 3 the user searches for the site by the name of the site only, the search engine will suggest the appropriate sites according to the method
 
+  </p>
+</div>
 <br/>
 <br/>
 </section>
@@ -150,7 +162,6 @@
 <div class="container">
   <form target="_blank" action="https://formsubmit.co/kolelyh@post.bgu.ac.il" method="POST">
     <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="https://web-development-environments-2022.github.io/assignment1-Chen1609/">
     <div class="form-group">
       <div class="form-row">
         <div class="col">
