--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <span>סרקו אותי!</span>
 </h1>
 <br/>
-<img src="src/farme.png" width="300" height="300"/>
+<img src="src/frame.png" width="300" height="300"/>
 <br/>
 <br/>
 </section>
