--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
 <div class="container">
   <form target="_blank" action="https://formsubmit.co/kolelyh@post.bgu.ac.il" method="POST">
     <input type="hidden" name="_captcha" value="false">
+
+
+<input type="hidden" name="_next" value="thanks.html">
     <div class="form-group">
       <div class="form-row">
         <div class="col">
