colored thank you page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html dir ="rtl">
 <head>
 <link rel="stylesheet" type="text/css" href="style.css" />
+
 <style>
   h1 {text-align: center; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif} 
   p {text-align: right;}
@@ -183,7 +184,7 @@
     <input type="hidden" name="_captcha" value="false">
 
 
-<input type="hidden" name="_next" value="thanks.html">
+<input type="hidden" name="_next" value="https://web-development-environments-2022.github.io/314943671/thanks.html">
     <div class="form-group">
       <div class="form-row">
         <div class="col">
