--- a/thanks.html
+++ b/thanks.html
@@ -1,66 +1,5 @@
 <!DOCTYPE html>
-<html lang="he">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta http-equiv="Content-Type" content="text/html" charset=utf-8">
-    <meta name="description"
-          content="FormSubmit is a form backend, API and email service for HTML forms. It sends your site's form submission directly into your inbox without a need for any backend code or SMTP setup."/>
-    <meta name="keywords" content="formsubmit, form submit, html form submit without backend, form api, formkeep, Formspree, form backend, formsubmit.io, helloforms, helloforms.co" />
-    <meta name="news_keywords" content="formsubmit, form submit, html form submit without backend, form api, formkeep, Formspree, form backend, formsubmit.io, helloforms, helloforms.co" />
-    <meta name="application-name" content="FormSubmit"/>
-    <meta content="index,follow,archive" name="robots">
-    <meta content="en" name="language">
-    <link href="https://formsubmit.co/" rel="canonical">
-    <link href="https://formsubmit.co/" rel="shortlink">
-
-    <link rel="alternate" href="https://formsubmit.co/" hreflang="x-default"><link rel="alternate" href="https://formsubmit.co/" hreflang="en"><link rel="alternate" href="https://formsubmit.co/" hreflang="en-au"><link rel="alternate" href="https://formsubmit.co/" hreflang="en-br"><link rel="alternate" href="https://formsubmit.co/" hreflang="en-ca"><link rel="alternate" href="https://formsubmit.co/" hreflang="en-de"><link rel="alternate" href="https://formsubmit.co/" hreflang="en-gb"><link rel="alternate" href="https://formsubmit.co/" hreflang="en-in"><link rel="alternate" href="https://formsubmit.co/" hreflang="en-nl"><link rel="alternate" href="https://formsubmit.co/" hreflang="en-us">
-
-    <meta class="swiftype" name="path" data-type="enum" content="/">
-    <meta class="swiftype" name="content_type" data-type="enum" content="homePage">
-    <meta class="swiftype" name="title" data-type="string"
-          content="FormSubmit | Easy to use form backend - form endpoints for your HTML forms">
-    <meta class="swiftype" name="description" data-type="string"
-          content="FormSubmit is a form backend, API and email service for HTML forms. It sends your site's form submission directly into your inbox without a need for any backend code or SMTP setup.">
-    <meta class="swiftype" name="image" data-type="enum" content="https://formsubmit.co/image/home-page.png">
-
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="FormSubmit | Easy to use form backend - form endpoints for your HTML forms"/>
-    <meta property="og:url" content="https://formsubmit.co/" />
-    <meta property="og:site_name" content="FormSubmit" />
-    <meta property="og:description"
-          content="FormSubmit is a form backend, API and email service for HTML forms. It sends your site's form submission directly into your inbox without a need for any backend code or SMTP setup.">
-    <meta property="og:image" content="https://formsubmit.co/image/home-page.png">
-    <meta property="og:locale" content="en_US"/>
-
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:site" content="@devrolabs"/>
-    <meta name="twitter:title" content="FormSubmit | Easy to use form backend - form endpoints for your HTML forms"/>
-    <meta name="twitter:domain" content="formsubmit.co"/>
-    <meta name="twitter:description"
-          content="FormSubmit is a form backend, API and email service for HTML forms. It sends your site's form submission directly into your inbox without a need for any backend code or SMTP setup."/>
-    <meta name="twitter:image" content="https://formsubmit.co/image/home-page.png" />
-    <meta name="twitter:creator" content="@devrolabs"/>
-
-    <!-- CSRF Token -->
-    <meta name="csrf-token" content="mvlo2PugABXOvdHA3DYvRmpX8SyPCJF7bEykcQAi">
-
-            <title>FormSubmit | Easy to use form backend - form endpoints for your HTML forms</title>
-    
-    <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://formsubmit.co/js/app.js" defer></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132047961-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-132047961-1');
-    </script>
-
+<head style="color: #232b32;">
     <!-- Fonts -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
@@ -69,25 +8,6 @@
     <!-- Styles -->
     <link href="https://formsubmit.co/css/app.css" rel="stylesheet">
 
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="https://formsubmit.co/image/favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="https://formsubmit.co/image/favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="https://formsubmit.co/image/favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="https://formsubmit.co/image/favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="https://formsubmit.co/image/favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="https://formsubmit.co/image/favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="https://formsubmit.co/image/favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="https://formsubmit.co/image/favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://formsubmit.co/image/favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="https://formsubmit.co/image/favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://formsubmit.co/image/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="https://formsubmit.co/image/favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://formsubmit.co/image/favicon/favicon-16x16.png">
-    <link rel="manifest" href="https://formsubmit.co/manifest.json">
-    <meta name="msapplication-TileColor" content="#232b32">
-    <meta name="msapplication-TileImage" content="https://formsubmit.co/image/favicon/ms-icon-144x144.png">
-    <meta name="msapplication-config" content="https://formsubmit.co/browserconfig.xml" />
-    <meta name="theme-color" content="#232b32">
         <style>
             html, body {
                 color: #232b32;
@@ -124,24 +44,16 @@
                 background-color: #152028;
                 padding: 40px;
             }
-
-            .backlink p {
-                font-size: 16px;
-            }
-
-            .backlink {
-                margin-top: 30px;
-            }
         </style>
 
     </head>
-    <body>
-    <div class="container">
+    <body style="background-color: #232b32;">
+    <div class="container" style="background-color: #232b32;">
         <div class="col">
             <div class="col-md-8 offset-md-2">
                 <h1>!תודה</h1>
                 <p>קיבלנו את המייל שלך. <a class='links' href='https://web-development-environments-2022.github.io/314943671/'>לחץ/י כאן כדי לחזור לאתר</a></p>
-                            </div>
+            </div>
         </div>
     <script>
         function submit(){
