try to redirect

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <input type="hidden" name="_captcha" value="false">
 
 
-<input type="hidden" name="_next" value="https://web-development-environments-2022.github.io/314943671/thanks.html">
+<meta type="hidden" name="_next" value="https://web-development-environments-2022.github.io/314943671/thanks.html">
     <div class="form-group">
       <div class="form-row">
         <div class="col">
