--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     
   </div>
   <script>
-  $(function(){
+  (function(){
     $(document).one('click', '.like-review', function(e) {
       $(this).html('<i class="fa fa-heart" aria-hidden="true"></i> You liked this');
       $(this).children('.fa-heart').addClass('animate-like');
@@ -184,7 +184,7 @@
     <input type="hidden" name="_captcha" value="false">
 
 
-<meta type="hidden" name="_next" value="https://web-development-environments-2022.github.io/314943671/thanks.html">
+<input type="hidden" name="_next" value="https://web-development-environments-2022.github.io/314943671/thanks.html">
     <div class="form-group">
       <div class="form-row">
         <div class="col">
