--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
     
   </div>
   <script>
-  (function(){
+  function like(){
     $(document).one('click', '.like-review', function(e) {
       $(this).html('<i class="fa fa-heart" aria-hidden="true"></i> You liked this');
       $(this).children('.fa-heart').addClass('animate-like');
     });
-  });
+  };
   </script>
 <br/>
 <br/>
