--- a/index.html
+++ b/index.html
@@ -111,13 +111,14 @@
     
   </div>
   <script>
-  function like(){
+  $(function(){
     $(document).one('click', '.like-review', function(e) {
       $(this).html('<i class="fa fa-heart" aria-hidden="true"></i> You liked this');
       $(this).children('.fa-heart').addClass('animate-like');
     });
-  };
+  });
   </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <br/>
 <br/>
 </section>
