--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html dir ="rtl">
 <head>
 <link rel="stylesheet" type="text/css" href="style.css" />
-
+<script language="JavaScript" type="text/javascript" src="/js/jquery-1.2.6.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="/js/jquery-ui-personalized-1.5.2.packed.js"></script>
+<script language="JavaScript" type="text/javascript" src="/js/sprinkle.js"></script>
 <style>
   h1 {text-align: center; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif} 
   p {text-align: right;}
@@ -118,7 +120,6 @@
     });
   });
   </script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <br/>
 <br/>
 </section>
