--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <a href="#playlist">שיר שאני אוהב</a>
     <a href="#like">תנו בלייק</a>
     <a href="#qrcoder">סרקו אותי!</a>
-    <a href="#spa">Q&A</a>
     <a href="#contact">צרו קשר</a>
     </div>
 </div>
@@ -47,7 +46,7 @@
 </h1>
 <br/>
 <p style="color:white;font-size:150%;">
-  קוראים לי פנחס סיאני ואני בן 72. אני אלמן כבר עשור, אבא ל-3 ילדים וסבא ל- 5 נכדים מקסימים. חקלאי ממושב בקעות. אוהב טיולים בארץ ובחו"ל, תיאטרון, אוכל ביתי נהנה ממסעדה טובה. מתרגש מזריחות ושקיעות, פריחות, נופים ואתרים מיוחדים.
+  שירה "טומי" בן הרוש, נולדה ב-15.10.2002. אחות של שחף ובת של פזית לוי ואלי בן הרוש (כן כן גרושים זה מה יש). גרה ביבנה (לא ממליץ ללכת אין מה לעשות שם - תומכת).משרתת במוס....אההה חיל האוויר. מתחילה בקרוב תואר בפסיכולוגיה באוניברסיטה הפתוחה (נרשמה היום -💁‍♀). חברה טובה של לין עוד מהתיכון כשהן היו רבות ברדיו על שטויות. (זה עוד כלום) לא הלכה למגמת ריקוד כי היא לא רוקדת אז במקום היא עשתה פסיכולוגיה ותקשורת (!). כיום שירה בקבע בתפקיד "אב בית" של בסיס חפץ חיים ומדי פעם כשהיא חוזרת הביתה היא הולכת למקומות עם איזה הודי שהיא מכירה (חושד שהיא אוהבת הודים) .
 </p>
 </section>
 
@@ -61,7 +60,7 @@
     <span>תמונות שלי</span>
 </h1>
 <br/>
-  <img class="center fit" src="src/selfie.jpeg"/>
+  <img class="center fit" src="src/selfie.jpg"/>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script type="text/javascript" language="JavaScript">
     function set_body_height() { // set body height = window height
