--- a/thanks.html
+++ b/thanks.html
@@ -52,7 +52,7 @@
         <div class="col">
             <div class="col-md-8 offset-md-2">
                 <h1>!תודה</h1>
-                <p>קיבלנו את המייל שלך. <a class='links' href='https://web-development-environments-2022.github.io/314943671/'>לחץ/י כאן כדי לחזור לאתר</a></p>
+                <p>קיבלנו את המייל שלך. <a class='links' href='https://chen1609.github.io/shira-s-site/'>לחץ/י כאן כדי לחזור לאתר</a></p>
             </div>
         </div>
     <script>
