--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html dir ="rtl">
 <head>
 <link rel="stylesheet" type="text/css" href="style.css" />
-
+<title>
+  shira's site
+</title>
 <style>
   h1 {text-align: center; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif} 
   p {text-align: right;}
