--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <span>שיר שאני אוהב:</span>
 </h1>
 <br/>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/VqhCQZaH4Vs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/bEeaS6fuUoA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br/>
 <br/>
 <br/>
