--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   }
 </style>
 </head>
-<body style="background-color:#232b32">
+<body style="background-color:pink">
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/he_IL/sdk.js#xfbml=1&version=v13.0" nonce="6tZncB95"></script>
    <div class="topnav">
@@ -82,7 +82,7 @@
   <br/>
 <br/>
 <br/>
-<span>שיר שאני אוהב:</span>
+<span>שיר שאני אוהבת:</span>
 </h1>
 <br/>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/bEeaS6fuUoA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
