changed all text color

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <br/>
 <br/>
 <br/>
-<h1 class="decorated" style="color:white;font-size:200%;">
+<h1 class="decorated" style="color:lightgray;font-size:200%;">
 <span>קצת עליי:</span>
 </h1>
 <br/>
@@ -58,7 +58,7 @@
 <br/>
 <br/>
 <br/>
-<h1 class="decorated" style="color:white;font-size:200%;">
+<h1 class="decorated" style="color:lightgray;font-size:200%;">
     <span>תמונות שלי</span>
 </h1>
 <br/>
@@ -78,7 +78,7 @@
 </section>
 <div class="center">
 <section id="playlist" >
-<h1 class="decorated" style="color:white;font-size:200%;">
+<h1 class="decorated" style="color:lightgray;font-size:200%;">
   <br/>
 <br/>
 <br/>
@@ -96,7 +96,7 @@
 <br/>
 <br/>
 <br/>
-  <h1 class="decorated" style="color:white;font-size:200%;">
+  <h1 class="decorated" style="color:lightgray;font-size:200%;">
     <span>תנו בלייק</span>
   </h1>
   <br/>
@@ -121,7 +121,7 @@
   <br/>
   <br/>
   <br/>
-<h1 class="decorated" style="color:white;font-size:200%;">
+<h1 class="decorated" style="color:lightgray;font-size:200%;">
   <span>סרקו אותי!</span>
 </h1>
 <br/>
@@ -137,7 +137,7 @@
   <br/>
   <br/>
   <br/>
-<h1 class="decorated" style="color:white;font-size:200%;">
+<h1 class="decorated" style="color:lightgray;font-size:200%;">
   <span>צרו קשר:</span>
 </h1>
 <br/>
