changed form color

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <br/>
 <br/>
   <h1 class="decorated" style="color:darkgray;font-size:200%;">
-    <span>תנו בלייק</span>
+    <span>אהבת?</span>
   </h1>
   <br/>
   
