--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   }
 </style>
 </head>
-<body style="background-color:pink">
+<body style="background-color:lightpink">
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/he_IL/sdk.js#xfbml=1&version=v13.0" nonce="6tZncB95"></script>
    <div class="topnav">
