changed text color darker

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <br/>
 <br/>
 <br/>
-<h1 class="decorated" style="color:darkgray;font-size:200%;">
+<h1 class="decorated" style="color:darkslategrey;font-size:200%;">
 <span>קצת עליי:</span>
 </h1>
 <br/>
