--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   
   <br/><div class="like-content">
   
-    <span>
+    <span style="color:darkslategrey;">
       Did you like this page? Press like to make it easier for others to see
     </span>
     </br>
@@ -111,21 +111,6 @@
 <span class="likebtn-wrapper" data-theme="drop" data-icon_l="thmb7-u" data-ef_voting="push" data-white_label="true" data-identifier="item_1" data-dislike_enabled="false" data-icon_dislike_show="false" data-counter_frmt="comma" data-popup_disabled="true" data-share_enabled="false" data-tooltip_enabled="false"></span>
 <script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js");</script>
 <!-- LikeBtn.com END -->
-<br/>
-<br/>
-</section>
-
-<section id="qrcoder" class="section">
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-  <br/>
-<h1 class="decorated" style="color:darkslategrey;font-size:200%;">
-  <span>סרקו אותי!</span>
-</h1>
-<br/>
-<img src="src/frame.png" width="300" height="300"/>
 <br/>
 <br/>
 </section>
