--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
         set_body_height();
     });
 </script>
+<img class="center fit" src="src/profile.jpg"/>
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script type="text/javascript" language="JavaScript">
+    function set_body_height() { // set body height = window height
+        $('body').height($(window).height());
+    }
+    $(document).ready(function() {
+        $(window).bind('resize', set_body_height);
+        set_body_height();
+    });
+</script>
 <br/>
 <br/>
 </section>
