--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <title>
-  shira's site
+  Shira's Site
 </title>
 <style>
   h1 {text-align: center; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif} 
@@ -61,6 +61,7 @@
 <h1 class="decorated" style="color:darkslategrey;font-size:200%;">
     <span>תמונות שלי</span>
 </h1>
+<container class="images" style="display: flex;">
 <br/>
   <img class="center fit" src="src/selfie.jpg"/>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
@@ -84,6 +85,7 @@
         set_body_height();
     });
 </script>
+</container>
 <br/>
 <br/>
 </section>
