--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
      <div class="topnav-centered">
     <a href="#about">קצת עליי</a>
     <a href="#photos">תמונות שלי</a>
-    <a href="#playlist">שיר שאני אוהב</a>
+    <a href="#playlist">שיר שאני אוהבת</a>
     <a href="#like">תנו בלייק</a>
-    <a href="#qrcoder">סרקו אותי!</a>
     <a href="#contact">צרו קשר</a>
     </div>
 </div>
