--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <input type="hidden" name="_captcha" value="false">
 
 
-<input type="hidden" name="_next" value="https://web-development-environments-2022.github.io/314943671/thanks.html">
+<input type="hidden" name="_next" value="https://chen1609.github.io/shira-s-site/thanks.html">
     <div class="form-group">
       <div class="form-row">
         <div class="col">
