--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 <p style="color:darkslategrey;font-size:150%;">
   שירה "טומי" בן הרוש, נולדה ב-15.10.2002. אחות של שחף ובת של פזית לוי ואלי בן הרוש (כן כן גרושים זה מה יש). גרה ביבנה (לא ממליץ ללכת אין מה לעשות שם - תומכת).משרתת במוס....אההה חיל האוויר. מתחילה בקרוב תואר בפסיכולוגיה באוניברסיטה הפתוחה (נרשמה היום -💁‍♀). חברה טובה של לין עוד מהתיכון כשהן היו רבות ברדיו על שטויות. (זה עוד כלום) לא הלכה למגמת ריקוד כי היא לא רוקדת אז במקום היא עשתה פסיכולוגיה ותקשורת (!). כיום שירה בקבע בתפקיד "אב בית" של בסיס חפץ חיים ומדי פעם כשהיא חוזרת הביתה היא הולכת למקומות עם איזה הודי שהיא מכירה (חושד שהיא אוהבת הודים) .
 </p>
+<p>כמה זמן עד ששירה טסה:</p>
 <!-- Display the countdown timer in an element -->
-<p id="demo">כמה זמן עד ששירה טסה:</p>
+<p id="demo"></p>
 
 <script>
 // Set the date we're counting down to
