--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </p>
 <p style="color:darkslategrey;font-size:250%;">כמה זמן עד ששירה טסה:</p>
 <!-- Display the countdown timer in an element -->
-<p id="demo"></p>
+<p id="demo" style="color:darkslategrey;font-size:250%;"></p>
 
 <script>
 // Set the date we're counting down to
