--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
   שירה "טומי" בן הרוש, נולדה ב-15.10.2002. אחות של שחף ובת של פזית לוי ואלי בן הרוש (כן כן גרושים זה מה יש). גרה ביבנה (לא ממליץ ללכת אין מה לעשות שם - תומכת).משרתת במוס....אההה חיל האוויר. מתחילה בקרוב תואר בפסיכולוגיה באוניברסיטה הפתוחה (נרשמה היום -💁‍♀). חברה טובה של לין עוד מהתיכון כשהן היו רבות ברדיו על שטויות. (זה עוד כלום) לא הלכה למגמת ריקוד כי היא לא רוקדת אז במקום היא עשתה פסיכולוגיה ותקשורת (!). כיום שירה בקבע בתפקיד "אב בית" של בסיס חפץ חיים ומדי פעם כשהיא חוזרת הביתה היא הולכת למקומות עם איזה הודי שהיא מכירה (חושד שהיא אוהבת הודים) .
 </p>
 <container style="display: inline-block;">
-  <p style="color:darkslategrey;font-size:250%;">כמה זמן עד ששירה טסה:</p>
+  <p style="color:darkslategrey;font-size:250%;">כמה זמן עד ששירה חוזרת מלונדון:</p>
   <!-- Display the countdown timer in an element -->
 <p id="demo" style="color:darkslategrey;font-size:250%;"></p>
 
 <script>
   // Set the date we're counting down to
-  var countDownDate = new Date("Jan 12, 2023 21:30:00").getTime();
+  var countDownDate = new Date("Jan 17, 2023 22:00:00").getTime();
 
   // Update the count down every 1 second
 var x = setInterval(function() {
