added back photos

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ var x = setInterval(function() {
 }, 1000);
 </script>
 </container>
-</section>
+</section>-->
 
 <section id="photos" class="section">
   <br/>
@@ -120,7 +120,7 @@ var x = setInterval(function() {
         set_body_height();
     });
 </script>
-</container>-->
+</container>
 <br/>
 <br/>
 </section>
