switched to spotify

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ var x = setInterval(function() {
   // If the count down is finished, write some text
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("demo").innerHTML = "UNKNOWN";
   }
 }, 1000);
 </script>
@@ -130,10 +130,10 @@ var x = setInterval(function() {
   <br/>
 <br/>
 <br/>
-<span>שיר שאני אוהבת:</span>
+<span>שירים שאני אוהבת:</span>
 </h1>
 <br/>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/bEeaS6fuUoA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0bRXwKfigvpKZUurwqAlEh?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <br/>
 <br/>
 <br/>
@@ -176,7 +176,7 @@ var x = setInterval(function() {
 <br/>
 <br/>
 <div class="container">
-  <form target="_blank" action="https://formsubmit.co/kolelyh@post.bgu.ac.il" method="POST">
+  <form target="_blank" action="https://formsubmit.co/kolelyh@gmail.com" method="POST">
     <input type="hidden" name="_captcha" value="false">
 
 
