--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <script src="confetti.js"></script>
+<audio src="happy_birthday.mp3"></audio>
 <title>
   Shira's Site
 </title>
@@ -151,16 +152,20 @@ var span = document.getElementsByClassName("close")[0];
 // When the user clicks on the button, open the modal
 body.onload = function() {
   modal.style.display = "block";
+  const audio = document.querySelector("audio");
+  audio.play();
 }
 // When the user clicks on <span> (x), close the modal
 span.onclick = function() {
   modal.style.display = "none";
+  audio.pause();
 }
 
 // When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
   if (event.target == modal) {
     modal.style.display = "none";
+    audio.pause();
   }
 } 
  </script>
