fixed song path

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <script src="confetti.js"></script>
-<audio src="happy_birthday.mp3"></audio>
+<audio src="src/happy_birthday.mp3"></audio>
 <title>
   Shira's Site
 </title>
