--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ var span = document.getElementsByClassName("close")[0];
 // When the user clicks on the button, open the modal
 body.onload = function() {
   modal.style.display = "block";
-  const audio = document.querySelector("audio");
+  const audio = document.getElementById("audio");
   audio.play();
 }
 // When the user clicks on <span> (x), close the modal
