--- a/index.html
+++ b/index.html
@@ -154,11 +154,13 @@ body.onload = function() {
   modal.style.display = "block";
   const audio = document.getElementById("audio");
   audio.play();
+  startConfetti();
 }
 // When the user clicks on <span> (x), close the modal
 span.onclick = function() {
   modal.style.display = "none";
   audio.pause();
+  stopConfetti();
 }
 
 // When the user clicks anywhere outside of the modal, close it
@@ -166,6 +168,7 @@ window.onclick = function(event) {
   if (event.target == modal) {
     modal.style.display = "none";
     audio.pause();
+    stopConfetti();
   }
 } 
  </script>
