--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <a href="#contact">צרו קשר</a>
     </div>
   </div>
+  <div class="container">
+
   <section id="about" class="section">
 <br/>
 <br/>
@@ -98,7 +100,6 @@
   <h1 class="decorated" style="color:darkslategrey;font-size:200%;">
     <span>תמונות שלי</span>
   </h1>
-  <button onclick="startConfetti();" class="btn btn-danger">Start</button>
   <container class="images" style="display: flex;">
     <br/>
     <img class="center fit" src="src/selfie.jpg"/>
@@ -125,6 +126,17 @@
 </script>
 </container>
 <br/>
+
+
+  <h1>Confetti Falling Animation Example</h1>
+
+  <button onclick="startConfetti();" class="btn btn-danger">Start</button>
+
+  <button onclick="stopConfetti();" class="btn btn-info">Stop</button>
+
+  <button onclick="toggleConfetti();" class="btn btn-warning">Toggle</button>
+
+</div>
 
  <!-- Trigger/Open The Modal -->
  <!--<button id="myBtn">Open Modal</button> -->
@@ -155,8 +167,8 @@ const audio = document.getElementById("audio");
 body.onload = function() {
   modal.style.display = "block";
   audio.play();
-  startConfetti();
 }
+startConfetti();
 // When the user clicks on <span> (x), close the modal
 span.onclick = function() {
   modal.style.display = "none";
